trunk/Archive2/bb/e791c28fab4ee6/output
main.cpp:2:6: error: conflicting declaration 'auto x'
 auto x = 4;
      ^
main.cpp:1:12: note: previous declaration as 'int x'
 extern int x;
            ^
