trunk/Archive2/bb/e791c28fab4ee6/main.cpp
extern int x;
auto x = 4;

int main(){
}